Template file create and update
in club login

--- a/template/view/html/common/footer.html
+++ b/template/view/html/common/footer.html
@@ -185,7 +185,8 @@
 <div class="footer-top">
     <div class="col-md-12 text-center">
         <div class="visit-counter">
-            Your Visitors Counts :
+            <!-- Your Visitors Counts : -->
+            You are visitor numbers -
             32435
         </div>
         <div class="social-icon">
