--- a/template/view/html/common/home.html
+++ b/template/view/html/common/home.html
@@ -8,11 +8,12 @@
                     <?php if($projects) : ?>
                     <?php foreach($projects as $project) : ?>
                     <div class="item">
-                        <img src="image/<?php echo $project['image']; ?>" alt="<?php echo $project['title']; ?>" class="images-responsive slider-image-size">
+                        <img src="image/<?php echo $project['image']; ?>" alt="<?php echo $project['title']; ?>"
+                            class="images-responsive slider-image-size">
                     </div>
                     <?php endforeach; ?>
                     <?php endif; ?>
-<!--                    <div class="item images-1">
+                    <!--                    <div class="item images-1">
                         <img src="template/view/dist/images/banner/IMG-20190223-WA0142.jpg" class="images-responsive slider-image-size">
                     </div>
                     <div class="item images-2">
@@ -36,17 +37,22 @@
                 <div class="quote-text">
                     <div class="col-md-4 col-sm-5 col-xs-5">
                         <div class="quote-1">
-                            <h4><a href="https://www.rotarydist3141.org.in/rotary_site/get-involved/district-thrust-area.php#content">District Thrust Area</a></h4>
+                            <h4><a
+                                    href="https://www.rotarydist3141.org.in/rotary_site/get-involved/district-thrust-area.php#content">District
+                                    Thrust Area</a></h4>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-5 col-xs-5">
                         <div class="quote-2">
-                            <h4><a href="https://www.rotarydist3141.org.in/rotary_site/get-involved/rotary-seva-muhim.php#content">Rotary Seva Muhim</a></h4>
+                            <h4><a
+                                    href="https://www.rotarydist3141.org.in/rotary_site/get-involved/rotary-seva-muhim.php#content">Rotary
+                                    Seva Muhim</a></h4>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-2 col-xs-2">
                         <div class="quote-3">
-                            <h4><a href="https://www.rotarydist3141.org.in/rotary_site/events.php#content">Event</a></h4>
+                            <h4><a href="https://www.rotarydist3141.org.in/rotary_site/events.php#content">Event</a>
+                            </h4>
                         </div>
                     </div>
                 </div>
@@ -55,70 +61,57 @@
                 <div class="col-md-12">
                     <div class="governor-desc">
                         <div class="row">
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                                 <div class="counter col_fourth">
-                                    <i class="fa fa-code fa-2x"></i>
+                                    <i class="fa fa-building-o fa-3x"></i>
                                     <h2 class="timer count-title count-number" data-to="90" data-speed="1500"></h2>
                                     <p class="count-text ">Total Club</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                                 <div class="counter col_fourth">
-                                    <i class="fa fa-coffee fa-2x"></i>
+                                    <i class="fa fa-users fa-3x"></i>
                                     <h2 class="timer count-title count-number" data-to="90" data-speed="1500"></h2>
                                     <p class="count-text ">Total Members</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                                 <div class="counter col_fourth">
-                                    <i class="fa fa-lightbulb-o fa-2x"></i>
-                                    <h2 class="timer count-title count-number" data-to="83735.00" data-speed="1500"></h2>
+                                    <i class="fa fa-dollar fa-3x"></i>
+                                    <h2 class="timer count-title count-number" data-to="83735.00" data-speed="1500">
+                                    </h2>
                                     <p class="count-text ">Total TRF Contribution</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                                 <div class="counter col_fourth end">
-                                    <i class="fa fa-bug fa-2x"></i>
+                                    <i class="fa fa-tasks fa-3x"></i>
                                     <h2 class="timer count-title count-number" data-to="32" data-speed="1500"></h2>
-                                    <p class="count-text ">Total Medical projects</p>
+                                    <p class="count-text ">Total projects</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                                 <div class="counter col_fourth">
-                                    <i class="fa fa-coffee fa-2x"></i>
+                                    <i class="fa fa-rupee fa-3x"></i>
                                     <h2 class="timer count-title count-number" data-to="25" data-speed="1500"></h2>
-                                    <p class="count-text ">SomeText GoesHere</p>
+                                    <p class="count-text ">Project Value</p>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                                 <div class="counter col_fourth">
-                                    <i class="fa fa-lightbulb-o fa-2x"></i>
+                                    <i class="fa fa-star fa-3x"></i>
                                     <h2 class="timer count-title count-number" data-to="227" data-speed="1500"></h2>
-                                    <p class="count-text ">SomeText GoesHere</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                                <div class="counter col_fourth">
-                                    <i class="fa fa-bug fa-2x"></i>
-                                    <h2 class="timer count-title count-number" data-to="90" data-speed="1500"></h2>
-                                    <p class="count-text ">SomeText GoesHere</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                                <div class="counter col_fourth end">
-                                    <i class="fa fa-code fa-2x"></i>
-                                    <h2 class="timer count-title count-number" data-to="90" data-speed="1500"></h2>
-                                    <p class="count-text ">SomeText GoesHere</p>
+                                    <p class="count-text ">Number of beneficiaries</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-<!--=========================*
+            <!--=========================*
         Banner
 *===========================-->
-<!--<section id="rt_banner">
+            <!--<section id="rt_banner">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -148,13 +141,13 @@
     </div>
     white-svg
 </section>-->
-<!--=========================*
+            <!--=========================*
             End	Banner
 *===========================-->
-<!--=========================*
+            <!--=========================*
             Services
 *===========================-->
-<!--<section id="rt_services">
+            <!--<section id="rt_services">
     <div class="container">
         <div class="row">
             <div class="mt_heading">
@@ -196,14 +189,14 @@
         </div>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
           End Services
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
             Work
 *===========================-->
-<!--<section id="rt_how_it_works">
+            <!--<section id="rt_how_it_works">
     <div class="container">
         <div class="row">
             <div class="mt_heading">
@@ -233,14 +226,14 @@
         </div>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
             End	Work
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
             Features
 *===========================-->
-<!--<section id="rt_features">
+            <!--<section id="rt_features">
     <div class="container">
         <div class="row">
             <div class="mt_heading">
@@ -280,14 +273,14 @@
         </div>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
            End Features
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
           ScreenShots
 *===========================-->
-<!--<section id="rt_screenshots">
+            <!--<section id="rt_screenshots">
     <div class="mt_heading_white">
         <h2 class="section_heading text-center"><span>Our Projects</span></h2>
         <p class="heading_txt text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -304,14 +297,14 @@
         <?php endif; ?>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
         End	ScreenShots
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
             Team
 *===========================-->
-<!--<section id="rt_team">
+            <!--<section id="rt_team">
     <div class="container">
         <div class="row">
             <div class="mt_heading">
@@ -343,15 +336,15 @@
         </div>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
           End Team
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
           Watch Section
 *===========================-->
 
-<!--<section id="rt_watch"
+            <!--<section id="rt_watch"
     style="background: url(image/template/work_bg_1.jpg); background-size: cover; background-attachment: fixed; background-repeat: no-repeat;">
     <div class="overlay"></div>
     <div class="container">
@@ -369,14 +362,14 @@
     </div>
 </section>-->
 
-<!--=========================*
+            <!--=========================*
         End Watch
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
           Testimonial
 *===========================-->
-<!--<section id="rt_testimonial">
+            <!--<section id="rt_testimonial">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -414,15 +407,15 @@
         </div>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
         End	Testimonial
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
           Fun And Facts
 *===========================-->
 
-<!--<section id="mt_fun">
+            <!--<section id="mt_fun">
     <div class="container">
         <div class="row facts_row">
             <div class="mt_heading_white">
@@ -495,14 +488,14 @@
     </div>
 </section>-->
 
-<!--=========================*
+            <!--=========================*
         End Fun And Facts
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
             Blog
 *===========================-->
-<!--<section id="rt_blog">
+            <!--<section id="rt_blog">
 
     <div class="container">
         <div class="row">
@@ -564,14 +557,14 @@
         </div>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
             End	Blog
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
             Contact
 *===========================-->
-<!--<section id="rt_contact">
+            <!--<section id="rt_contact">
     <div class="mt_heading">
         <h2 class="section_heading text-center"><span>Contact Us</span></h2>
         <p class="heading_txt text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -641,14 +634,14 @@
         </div>
     </div>
 </section>-->
-<!--=========================*
+            <!--=========================*
           End Contact
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
             Get App
 *===========================-->
-<!-- <section id="rt_get_app" style="background: url(image/template/feature/get-bg.jpg);">
+            <!-- <section id="rt_get_app" style="background: url(image/template/feature/get-bg.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -673,14 +666,14 @@
             </div>
         </div>
     </section> -->
-<!--=========================*
+            <!--=========================*
           End Get App
 *===========================-->
 
-<!--=========================*
+            <!--=========================*
           Subscribe
 *===========================-->
-<!-- <section id="newsletter">
+            <!-- <section id="newsletter">
         <div class="container">
             <div class="row">
                 <div class="col-md-3"></div>
@@ -710,7 +703,7 @@
             </div>
         </div>
     </section> -->
-<!--=========================*
+            <!--=========================*
           End Subscribe
 *===========================-->
-<?php echo $footer; ?>
+            <?php echo $footer; ?>
