--- a/template/view/html/common/nav.html
+++ b/template/view/html/common/nav.html
@@ -66,10 +66,10 @@
                                 <li><a href="<?php echo $club; ?>"><i
                                             class="fa fa-user-circle header-fa"></i>&nbsp;<?php echo $text_club; ?></a>
                                 </li>
-                                <li><a href="https://my.rotary.org/en/user/login?destination=user/profile/edit"
+                                <!-- <li><a href="https://my.rotary.org/en/user/login?destination=user/profile/edit"
                                         target="_blank"><i
                                             class="fa fa-user-circle header-fa"></i>&nbsp;<?php echo $text_member; ?></a>
-                                </li>
+                                </li> -->
                             </ul>
                         </li>
                         <li>
