--- a/template/view/html/common/navpage.html
+++ b/template/view/html/common/navpage.html
@@ -35,6 +35,9 @@
             <li>
                 <a href="<?php echo $add_data; ?>"><?php echo $text_add_data; ?></a>
             </li>
+            <li>
+                <a href="<?php echo $add_citation; ?>"><?php echo $text_citation; ?></a>
+            </li>
             <!-- <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
             <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
             <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li> -->
@@ -50,6 +53,9 @@
         </li>
         <li>
             <a href="<?php echo $add_data; ?>"><?php echo $text_add_data; ?></a>
+        </li>
+        <li>
+            <a href="<?php echo $add_citation; ?>"><?php echo $text_citation; ?></a>
         </li>
         <!-- <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
         <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
