--- a/template/view/html/common/footer.html
+++ b/template/view/html/common/footer.html
@@ -7,14 +7,14 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg">
                             <h4 class="box-title box-text">
                                 <a href="javascript:;" target="_blank">District<br /> Directory 2018-19</a>
                             </h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg">
                             <h4 class="box-title box-text">
                                 <a href="https://www.rotarydist3141.org.in/rotary_site/governor_monthly_letter.php">Governor's
@@ -22,7 +22,7 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg">
                             <h4 class="box-title box-text">
                                 <a href="https://www.rotarydist3141.org.in/rotary_site/events.php">District
@@ -30,7 +30,7 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg">
                             <h4 class="box-title box-text">
                                 <a href="https://www.rotarydist3141.org.in/rotary_site/gallery/photo-gallery.php">Gallery
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg header-link">
                             <h4 class="box-title box-text">
                                 <a href="https://www.rotarydist3141.org.in/rotary_site/events.php">
@@ -54,14 +54,14 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg header-link">
                             <h4 class="box-title box-text">
                                 <a href="https://www.rotarydist3141.org.in/rotary_site/donate_now.php">DONATE NOW</a>
                             </h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg header-link">
                             <h4 class="box-title box-text">
                                 <a href="https://www.rotarydist3141.org.in/rotary_site/pledge_your_organs.php">PLEDGE
@@ -69,7 +69,7 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                         <div class="desc-box box-bg header-link">
                             <h4 class="box-title box-text">
                                 <a
@@ -85,8 +85,8 @@
     </div>
 </div>
 <div class="gallery-section">
-    <div class="col-md-4 col-sm-12 col-xs-12">
-        <div class="col-md-12">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
             <div class="row">
                 <div class="galley-pro gallery-mb">
                     <a href="https://my.rotary.org/en/news-media/office-president/ri-president" target="_blank">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
             <div class="row">
                 <div class="galley-pro">
                     <a
@@ -148,8 +148,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4 col-sm-12 col-xs-12">
-        <div class="col-md-12">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
             <div class="row">
                 <div class="galley-pro gallery-mb">
                     <a href="javascript:;">
@@ -164,7 +164,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
             <div class="row">
                 <div class="galley-pro">
                     <a href="javascript:;">
@@ -204,106 +204,19 @@
     </div>
 </div>
 <div class="footer-bottom">
-    <div class="col-md-12 text-center">
-        <div class="footer-powered">
-            <h5 class="powered">Powered By : Phoenix Softnet Technologies P. Ltd.</h5>
-            <h5 class="developed">Developed By : <a href="http://popaya.in/" target="_blank">Popaya&trade;
-                    Technologies</a></h5>
-        </div>
+    <div class="footer-powered">
+        <h5 class="powered">Powered By : Phoenix Softnet Technologies P. Ltd.</h5>
+        <h5 class="developed">Developed By : <a href="http://popaya.in/" target="_blank">Popaya&trade;
+                Technologies</a></h5>
     </div>
 </div>
 </div>
 </div>
 </div>
-<!--<footer id="rt_footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="footer_logo text-left">
-                    <a href="<?php echo $home; ?>">
-                        <?php if($logo_colour) : ?>
-                        <img src="image/template/logo-color.png" alt="<?php echo $name; ?>">
-                        <?php else : ?>
-                        <?php echo $name; ?>
-                        <?php endif; ?>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 text-left">
-                <div class="footer_address">
-                    <p><?php echo $address; ?></p>
-                    <a href="tel:<?php echo $telephone; ?>"><?php echo $telephone; ?></a>
-                    <span>
-                        <a href="mailto:<?php echo $email; ?>"><?php echo $email; ?></a>
-                    </span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="social_icons mb-110 mb-xs-60">
-                    <a href="https://www.facebook.com/popaya.in/" title="Facebook" target="_blank"><i
-                            class="fa fa-facebook"></i></a>
-                    <a href="https://www.twitter.com/popayain/" title="Twitter" target="_blank"><i
-                            class="fa fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/popayain/" title="Instagram" target="_blank"><i
-                            class="fa fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/popaya/" title="LinkedIn" target="_blank"><i
-                            class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="copyright text-left">
-                    <p><?php echo $text_powered; ?></p>
-                    <p><?php echo $text_reserved; ?></p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>-->
-<!--=========================*
-           End Footer
-*===========================-->
-
-<!--<a href="<?php echo $crawler; ?>" hidden>Web Crawlers</a>-->
-
-<!--=========================*
-            Scripts
-*===========================-->
-
-<!-- Jquery Js 
-<script src="template/view/dist/js/jquery.min.js"></script>
- Bootstrap Js 
-<script src="template/view/dist/js/bootstrap.min.js"></script>
- Paralex Js 
-<script src="template/view/dist/js/jquery.parallax-1.1.3.js"></script>
- Fancy Box Js 
-<script src="template/view/dist/js/jquery.fancybox.pack.js"></script>
- WOW Js 
-<script src="template/view/dist/js/wow.min.js"></script>
- YT Player Js 
-<script src="template/view/dist/js/jquery.mb.YTPlayer.js"></script>
- Masonary Grid 
-<script src="template/view/dist/js/masonry.pkgd.min.js"></script>
- Navigation scroll Js 
-<script src="template/view/dist/js/jquery.nav.js"></script>
- Owl Carousel Js 
-<script src="template/view/dist/js/owl.carousel.min.js"></script>
- Easing Js 
-<script src="template/view/dist/js/jquery.easing.min.js"></script>
- Fancy Box Js 
-<script src="template/view/dist/js/jquery.fancybox.pack.js"></script>
- Appear Js 
-<script src="template/view/dist/js/jquery.appear.js"></script>
- Count Js 
-<script src="template/view/dist/js/jquery.countTo.js"></script>
- Toastr Js 
-<script src="template/view/dist/js/toastr.min.js"></script>
- Main Js 
-<script src="template/view/dist/js/main.js"></script>-->
-
 <script src="template/view/dist/plugins/jQuery/jquery-2.2.3.min.js"></script>
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script src='template/view/dist/event/lib/moment.min.js'></script>
-<script src='template/view/dist/event/fullcalendar.min.js'></script>
+<!-- <script src='template/view/dist/event/lib/moment.min.js'></script> -->
+<!-- <script src='template/view/dist/event/fullcalendar.min.js'></script> -->
 <script src="template/view/dist/plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="template/view/dist/plugins/datatables/dataTables.bootstrap.min.js"></script>
 <script src="template/view/dist/js/main.js"></script>
